Update Recommanded JVM Arguments